fix for invisible links

--- a/public/projects/css/style.css
+++ b/public/projects/css/style.css
@@ -1,7 +1,3 @@
-.nav {
-    text-align: right;
-}
-
 a:link {
     color: #FFFBF5;
 }
